--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <body>
 
     <div class="container">
-        <img src="https://i.imgur.com/eBcxm3s.png" alt="Noaré Logo" class="profile-picture">
+        <img src="Noare logo.png" alt="Noaré Logo" class="profile-picture">
         
         <h1 class="profile-name">Noaré</h1>
         <p class="profile-tagline">Luxury You Can Wear</p>
