--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
         <p class="profile-tagline">Luxury You Can Wear</p>
 
         <div class="links-container">
-            <a href="https://shopee.co.id/your-shopee-username" target="_blank">Shop on Shopee</a>
-            <a href="https://www.tiktok.com/@your-tiktok-username" target="_blank">Follow on TikTok</a>
-            <a href="https://www.instagram.com/noare.id" target="_blank">Explore on Instagram</a>
-            <a href="https://wa.me/6281234567890" target="_blank">Contact us on WhatsApp</a>
+            <a href="shopee.co.id/noare.id" target="_blank">Shop on Shopee</a>
+            <a href="https://lynk.id/noare.id?fbclid=PAZnRzaANNAgpleHRuA2FlbQIxMQABp3qw2mOfZigk2lFoybTBRBfWgdh_YKF5jJbNqslV4mh2Q_DCzVGRXFNr5Q03_aem_mi-ysQzKHTgH44BHm5PN_w" target="_blank">Follow on TikTok</a>
+            <a href="https://www.instagram.com/noare.id?igsh=bmd5NTM4N256eTNm&utm_source=qr" target="_blank">Explore on Instagram</a>
+            <a href="https://wa.me/6285886834104" target="_blank">Contact us on WhatsApp</a>
         </div>
 
         <div class="social-icons">
