--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
         <p class="profile-tagline">Luxury You Can Wear</p>
 
         <div class="links-container">
-            <a href="shopee.co.id/noare.id" target="_blank">Shop on Shopee</a>
-            <a href="https://lynk.id/noare.id?fbclid=PAZnRzaANNAgpleHRuA2FlbQIxMQABp3qw2mOfZigk2lFoybTBRBfWgdh_YKF5jJbNqslV4mh2Q_DCzVGRXFNr5Q03_aem_mi-ysQzKHTgH44BHm5PN_w" target="_blank">Follow on TikTok</a>
+            <a href="https://lynk.id/noare.id?fbclid=PAZXh0bgNhZW0CMTEAAadRXSXa3p7vjaBo5x6EIDSxtY9Sk583tdV1yUPuY-zIcfsRY4GidrZG2bV9yg_aem_B5PKyXdu2WyFW5pGNaUEYw" target="_blank">Shop on Shopee</a>
+            <a href="https://lynk.id/noare.id?fbclid=PAZXh0bgNhZW0CMTEAAadRXSXa3p7vjaBo5x6EIDSxtY9Sk583tdV1yUPuY-zIcfsRY4GidrZG2bV9yg_aem_B5PKyXdu2WyFW5pGNaUEYw" target="_blank">Follow on TikTok</a>
             <a href="https://www.instagram.com/noare.id?igsh=bmd5NTM4N256eTNm&utm_source=qr" target="_blank">Explore on Instagram</a>
             <a href="https://wa.me/6285886834104" target="_blank">Contact us on WhatsApp</a>
         </div>
